[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scenema-audio"
version = "1.0.0"
description = "Installable CUDA API for Scenema Audio expressive TTS."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.13.0",
    "beartype==0.22.9",
    "bitsandbytes==0.49.2",
    "click>=8.1,<9",
    "ctranslate2==4.7.1",
    "descript-audio-codec==1.0.0",
    "diffusers==0.37.1",
    "einops==0.8.0",
    "en-core-web-sm",
    "faster-whisper==1.2.1",
    "funasr==1.3.1",
    "hf-xet>=1.2.0",
    "httpx==0.28.1",
    "huggingface-hub==0.36.2",
    "hydra-core==1.3.2",
    "kokoro==0.9.4",
    "librosa==0.10.2",
    "ltx-core @ git+https://github.com/Lightricks/LTX-2.git@41d924371612b692c0fd1e4d9d94c3dfb3c02cb3#subdirectory=packages/ltx-core",
    "ltx-pipelines @ git+https://github.com/Lightricks/LTX-2.git@41d924371612b692c0fd1e4d9d94c3dfb3c02cb3#subdirectory=packages/ltx-pipelines",
    "munch==4.0.0",
    "numpy==2.2.6",
    "onnxruntime==1.25.0",
    "psutil==7.2.2",
    "pydub==0.25.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "rotary-embedding-torch==0.8.9",
    "safetensors==0.7.0",
    "scipy>=1.14,<2",
    "sentencepiece==0.2.1",
    "soundfile==0.12.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.57.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scenema_audio", "src/audio_core", "src/common"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
